# easy-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py  settings.py
src/microblog_api/: router.py  schemas.py  security.py  serializers.py  service.py
tests/: conftest.py  test_routes.py
