[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.poetry]
name = "easy-fastapi"
version = "0.1.0"
description = ""
authors = ["Sergey <one6sergey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.18.0"
black = "^24.4.2"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.0"
pytest = "^8.2.2"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
